Mobile menu will slide down from top instead of right. Fixed banner font-size on mobile

--- a/src/components/banner.sass
+++ b/src/components/banner.sass
@@ -1,18 +1,20 @@
+@import "../variables"
+
 .banner
   display: flex
   align-items: center
   justify-content: center
+  text-align: center
   width: 100%
-  max-width: 1920px
-  height: calc(100vh - 4.5rem) /* Navigation bar height is 4.5rem */
-  color: white
+  height: calc(100vh - #{$header-height})
+  color: $text-color
+  letter-spacing: .5rem
+  text-shadow: 2px 2px 7px $text-color
   background:
     image: url("../images/banner.jpg")
     size: cover
     repeat: no-repeat
-  letter-spacing: .5rem
-  text-shadow: 2px 2px 7px white
-  > span
+  > h1
     font:
-      size: 4.5rem
+      size: 3rem
       weight: bold
