--- a/src/components/navigation/menu-item.sass
+++ b/src/components/navigation/menu-item.sass
@@ -45,10 +45,6 @@ $mobile-link-margin: .5rem 0
   margin: $mobile-link-margin
   display: initial
 
-  &:active
-    color: $text-color
-    background-color: $primary-color
-
 .mobile-menu__cta
   @extend .menu-item
   display: initial
